examples/test/testpolicy4942.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy4942
  namespace: namespace409
spec:
  podSelector:
    matchLabels:
      key8: value15
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key35: value21
          key14: value41
          key37: value22
      podSelector:
        matchLabels:
          key39: value18
